mobile css fixes

--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -32,33 +32,33 @@
             class="home first" 
             ng-class="{'active': vm.stateName == 'home'}" 
             ui-sref-active="active">
-            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-xs hidden-sm">Home</a>
-            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Home</a>
+            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-xs">Home</a>
+            <a ng-class="{'active': vm.stateName == 'home'}" ui-sref="home" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Home</a>
           </li>
           <li  
             ng-class="{'active': vm.stateName == 'programmes'}">
-            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-xs hidden-sm">Programmes</a>
-            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Programmes</a>
+            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-xs">Programmes</a>
+            <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Programmes</a>
           </li>
           <li  
             ng-class="{'active': vm.stateName == 'activities'}">
-            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-xs hidden-sm">Projects</a>
-            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Projects</a>
+            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-xs">Projects</a>
+            <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Projects</a>
           </li>
           <li 
             ng-class="{'active': vm.stateName == 'locations'}">
-            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-xs hidden-sm">Countries</a>
-            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Countries</a>
+            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-xs">Countries</a>
+            <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Countries</a>
           </li>
           <li 
             ng-class="{'active': vm.stateName == 'sectors'}">
-            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-xs hidden-sm">Sectors</a>
-            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Sectors</a>
+            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-xs">Sectors</a>
+            <a ng-class="{'active': vm.stateName == 'sectors'}"  ui-sref="sectors" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Sectors</a>
           </li>
           <li 
             ng-class="{'active': vm.stateName == 'organisations'}">
-            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-xs hidden-sm">Project partners</a>
-            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Project partners</a>
+            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-xs">Project partners</a>
+            <a ng-class="{'active': vm.stateName == 'organisations'}"  ui-sref="organisations" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">Project partners</a>
           </li>
 
           <!-- <li  -->
@@ -66,8 +66,8 @@
 
           <li 
             ng-class="{'active': vm.stateName == 'about'}">
-            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-xs hidden-sm">About RVO open data</a>
-            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">About RVO open data</a>
+            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-xs">About RVO open data</a>
+            <a ng-class="{'active': vm.stateName == 'about'}"  ui-sref="about" class="hidden-sm hidden-md hidden-lg mobi" data-toggle="collapse" data-target="#main-menu">About RVO open data</a>
             </li>
         </ul>
       </div>
