--- a/templates/sectors/sectors-view-list.html
+++ b/templates/sectors/sectors-view-list.html
@@ -9,7 +9,7 @@
         submit-search="vm.submitSearch"></top-navbar>
     -->
 
-    <div class="switch-view">
+    <div class="switch-view hidden-xs">
 		<div class="panel current lightblue no-margin-bottom">
 			<i class="icon globe"></i> Map & list view
 		</div>
