better responsive tables for mobile

--- a/templates/_charts/oipa-table-chart.html
+++ b/templates/_charts/oipa-table-chart.html
@@ -1,61 +1,63 @@
-<table class="table top5-table">
-    <thead>
-        <tr>
-            <th style="padding-left: 31px;">
-                <label class="wrapper">
-                    <div class="custom-select ff-hack wide">
+<div class="table-responsive">
+    <table class="table top5-table">
+        <thead>
+            <tr>
+                <th style="padding-left: 31px;">
+                    <label class="wrapper">
+                        <div class="custom-select ff-hack wide">
 
-                        <select ng-model="topFive">
-                            <option value='recipient-country'>Top 5 countries</option>
-                            <option value='transaction__receiver-org'>Top 5 implementing organisations</option>
-                            <option value='sector'>Top 5 sectors</option>
-                        </select>
+                            <select ng-model="topFive">
+                                <option value='recipient-country'>Top 5 countries</option>
+                                <option value='transaction__receiver-org'>Top 5 implementing organisations</option>
+                                <option value='sector'>Top 5 sectors</option>
+                            </select>
 
-                    </div>
-                </label>
-            </th>
-            <th>
-                <div class="custom-select ff-hack">
-
-                    <select ng-model="transactionYear">
-                        <option value='2015'>Expenditure in 2015</option>
-                        <option value='2014'>Expenditure in 2014</option>
-                        <option value='2013'>Expenditure in 2013</option>
-                        <option value='2012'>Expenditure in 2012</option>
-                        <option value='2011'>Expenditure in 2011</option>
-                        <option value='2010'>Expenditure in 2010</option>
-                        <option value='2009'>Expenditure in 2009</option>
-                    </select>
-
-                </div>
-            </th>
-            <th>
-                <label class="wrapper">
+                        </div>
+                    </label>
+                </th>
+                <th>
                     <div class="custom-select ff-hack">
 
-                        <select ng-model="activityStatus">
-                            <option value='2'>Active projects</option>
-                            <option value='3,4'>Completed projects</option>
+                        <select ng-model="transactionYear">
+                            <option value='2015'>Expenditure in 2015</option>
+                            <option value='2014'>Expenditure in 2014</option>
+                            <option value='2013'>Expenditure in 2013</option>
+                            <option value='2012'>Expenditure in 2012</option>
+                            <option value='2011'>Expenditure in 2011</option>
+                            <option value='2010'>Expenditure in 2010</option>
+                            <option value='2009'>Expenditure in 2009</option>
                         </select>
 
                     </div>
-                </label>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="item in vm.chartData">
-<!--         	<td class="colour"><div></div></td>
- -->        <td>
-            	<span class="no">{{$index + 1}}.</span>
+                </th>
+                <th>
+                    <label class="wrapper">
+                        <div class="custom-select ff-hack">
 
-            	<!-- <a ui-sref="country({ country_id: item.country_id })"> -->
-                <a ng-href="{{vm.homeUrl+'/'+groupSref+'/'+item.id+'/'}}">
-	            	<span ng-if="item.country_id" class="flag-icon flag-icon-{{item.country_id | lowercase }}"></span><span>{{item.name}}</span>
-            	</a>
-            </td>
-            <td>{{item.total_disbursements | shortcurrency :'€'}}</td>
-            <td><span>{{item.activity_count}} projects</span></td>
-        </tr>
-    </tbody>
-</table>
+                            <select ng-model="activityStatus">
+                                <option value='2'>Active projects</option>
+                                <option value='3,4'>Completed projects</option>
+                            </select>
+
+                        </div>
+                    </label>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="item in vm.chartData">
+    <!--         	<td class="colour"><div></div></td>
+     -->        <td>
+                	<span class="no">{{$index + 1}}.</span>
+
+                	<!-- <a ui-sref="country({ country_id: item.country_id })"> -->
+                    <a ng-href="{{vm.homeUrl+'/'+groupSref+'/'+item.id+'/'}}">
+    	            	<span ng-if="item.country_id" class="flag-icon flag-icon-{{item.country_id | lowercase }}"></span><span>{{item.name}}</span>
+                	</a>
+                </td>
+                <td>{{item.total_disbursements | shortcurrency :'€'}}</td>
+                <td><span>{{item.activity_count}} projects</span></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
