--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -63,7 +63,7 @@
                 ng-class="{'active': vm.isOpenedHeader('recipient_implementing_organisations')}"
                 ng-show="vm.isIncludedFilter('recipient_implementing_organisations')"
                 ng-if="vm.pageName != 'organisation'">
-              Implementing organisations
+              Project partners
             </span>
  
             <span 
