--- a/templates/filters/filter-panel-sectors.html
+++ b/templates/filters/filter-panel-sectors.html
@@ -5,7 +5,7 @@
 		<div class="col-md-4">
 			<div class="search-box">
 			    <div class="form-group">
-			        <input ng-model="vm.q" class="form-control" placeholder="Search by sector name..">
+			        <input ng-model="vm.q" class="form-control" placeholder="Search by sector name...">
 			        <button class="btn-search" type="button">
 			            <span class="fa fa-search"></span>
 			        </button>
