--- a/templates/filters/filter-selection-box.html
+++ b/templates/filters/filter-selection-box.html
@@ -52,7 +52,7 @@
 
 					<a 
 						class="selected filter-selected-button selectedActivityStatuses" 
-						ng-show="vm.selectedBudget.on && vm.selectedBudget.value[1] == 30000000" 
+						ng-show="vm.selectedBudget.on" 
 						ng-click="vm.removeBudgetFilter()">
 						Budget: {{vm.selectedBudget.value[0] | shortcurrency :'€'}} - {{vm.selectedBudget.value[1] | shortcurrency :'€'}}
 						
