--- a/templates/filters/filter-panel-budget.html
+++ b/templates/filters/filter-panel-budget.html
@@ -3,7 +3,7 @@
 		<div class="checkbox">
 			<label class="switch">
 				<input type="checkbox" ng-model="vm.on"><i></i>
-				<span>Select budget</span>
+				<span>Select activity budget</span>
 			</label>
 		</div>
 
