fix country detail page map, BF image

--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -11,6 +11,7 @@
 					<thead>
 						<tr>
 							<td class="th-first">Select one or more statuses</td>
+							<td>Projects</td>
 						</tr>
 					</thead>
 					<tbody>
