--- a/templates/filters/filter-panel-programmes.html
+++ b/templates/filters/filter-panel-programmes.html
@@ -11,6 +11,7 @@
                     <thead>
                         <tr>
                             <td class="th-first">Select one or more programmes</td>
+                            <td>Projects</td>
                         </tr>
                     </thead>
                     <tbody>
