--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -86,10 +86,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="panel lightblue with-pie">
-                        <h3>Programmes linked to</h3>
+                        <h3>Projects per programme</h3>
                         <hr>
                         <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
-                        <h3>Countries linked to</h3>
+                        <h3>Projects per country</h3>
                         <hr>
                         <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                     </div>
