404 fix for orgs

--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -51,7 +51,7 @@
                         <h4>{{result.title.narratives[0].text}}</h4>
                         <p style="margin-bottom:10px;">{{result.description.narratives[0].text}}</p>
                         <div class="table-responsive">
-                            <table class="finance no-blue" ng-if="vm.activity.results.length != 0">
+                            <table class="finance no-blue no-margin" ng-if="vm.activity.results.length != 0">
                                 <thead>
                                     <tr>
                                         <th width="200">Unit of result</th>
