--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,28 +1,31 @@
 <div id="main-content" class="about-page container">
 	<div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-		    <h2>What data can be found at this portal of the Netherlands Enterprise Agency (RVO.nl)?</h2>
-			<p>At this portal is visualized the open data on official development aid projects and programmes executed  by the Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland  - <a href="http://www.rvo.nl">RVO.nl</a>). Programmes commissioned and funded by the Dutch Ministry of Foreign Affairs. On projects under implementation at or started after January 2015.
-			The data is published in the international International Aid Transparancy Initiative (IATI) standard which is easy for computers to read, but very hard for humans. The information is made accessible through a web interface. It does not alter or interpret the data in any way.</p>
-			<p>Non-IATI data on projects - as monitoring reports, photos and videos - is added regularly.</p>
-			<p>The Netherlands Enterprise Agency publishes and updates its projects on at least quarterly basis. Based on the principle that all project information should be published unless there is a clear reason for not doing so. Only confidentiality of data or safety for staff executing a project can be a reason for not publishing data. This can be on individual bits of information or the entire project.</p>
+		    <h2>What data can be found on this portal of the Netherlands Enterprise Agency (RVO.nl)?</h2>
+			<p>This portal visualizes  the open data on official development aid (ODA) projects and programmes executed by the <a href="http://english.rvo.nl/">Netherlands Enterprise Agency (RVO.nl)</a> and commissioned and funded by the Ministry of Foreign Affairs of the Netherlands. The Ministry of Infrastructure and Environment is co-financer of one programme. The information relates to projects that were either active on or started after January 2015.</p>
+			<p>The data is published according to the <a href="http://www.iatistandard.org">International Aid Transparancy Initiative (IATI) standard</a>, which is easy for computers to read, but very hard for humans . The information is therefore made accessible through a web interface. It does not alter or interpret the data in any way. Additional non-IATI data on projects - as monitoring reports, photos and videos - is added regularly. </p>
+			<p>By publishing this data on a website it becomes relatively easy to see which projects are being carried out for a particular country, sector or programme. It also makes it possible to see when, where and by whom projects are being carried out and how much money is being spent. In 2016, data on results (outcome) of projects will be added increasingly.</p>
+			<p>The Netherlands Enterprise Agency publishes and updates its projects at least on a quarterly basis. The policy is that all project information should be published, unless there is a clear reason for not doing so. Only confidentiality of data or safety for staff executing a project can be a reason for not publishing data. This can be on individual pieces of information or the entire project.</p>
+			<p>Data is visualized for 15 of the 20 ODA programmes which Netherlands Enterprise Agency is executing.</p>
+
 			<h2>Why is open data important?</h2>
-			<p>Transparency of development aid enhances the effectiveness and quality of development aid. Politicians, civil society, the media and the (Dutch) public gets a better picture of how public money is spent.</p>
-			<p>Analyzing and visualizing of RVO.nl data and then and combining it with the data of other governmental bodies and NGO’s makes it relatively easy to see which projects are being carried out for a particular country, region, sector or theme. It also makes it possible to see when, where and by whom projects are being carried out and how much money is being spent.</p>
-			<p>Additionally, open data can be used as a communication tool, monitoring & evaluation tool, information and knowledge management system and create track records.
-			Finally, visualisation of data will also alter the way RVO.nl reports to the Ministry of Foreign Affairs on goals and results of programmes and projects.</p>
+			<p>Transparency of development aid enhances the effectiveness and quality of development aid. Politicians, civil society, the media and the public get better insight into how public money is spent.</p>
+			<p>Additionally, open data can be used as a communication tool, monitoring & evaluation tool, information and knowledge management system and create track records.</p>
+			<p>Finally, visualisation of data will also alter the way Netherlands Enterprise Agency reports to the Ministry of Foreign Affairs of the Netherlands on goals and results of programmes and projects. </p>
+
 			<h2>Data quality</h2>
-			<p>Data quality is one of the mayor challenges. Traditionally the data comes from fragmented information held in internal systems, used for reporting to the Ministry of Foreign Affairs. So without open publication in mind.</p>
-			<p>We believe that open data is not about the publication of perfect data; it’s about perfecting that data and the projects that it pertains to. As the culture of open data and transparency becomes embedded into the organization, the quality and application of data will continue to improve.</p>
-			<p>The financial data in this portal does not automatically synchronize completely with the finance & control accounting system of RVO.nl. This system is always leading and more accurate.</p>
-			<p>Despite all efforts, it is very well possible then that mistakes or imperfections are noticed in our data files. If so, don’t hesitate to let us know via <a href="mailto:iati@rvo.nl">iati@rvo.nl</a>.</p>
+			<p>Data quality is one of the major challenges. Traditionally the data comes from fragmented information stored in internal systems, used for reporting to the Ministry of Foreign Affairs. (Not with open publication in mind.)</p>
+			<p>We believe that open data is not about the publication of perfect data - it’s about perfecting that data and the projects that it pertains to. As the culture of open data and transparency becomes embedded into the organisation, the quality and application of data will continue to improve.</p>
+			<p>The financial data in this portal does not automatically synchronize completely with the finance &  control accounting system of RVO.nl. This system is always leading and more accurate.</p>
+			<p>Despite all efforts, it is very well possible  that errors or imperfections are noticed in our data files. If so, don’t hesitate to let us know via <a href="mailto:iati@rvo.nl">iati@rvo.nl</a>.</p>
+
 			<h2>Credits</h2>
-			<p>Aiddata.rvo.nl is designed & developed by <a href="http://www.zimmermanzimmerman.nl" target="_blank">Zimmerman & Zimmerman</a>. Zimmerman & Zimmerman is a dutch open-data visualisation company based in Amsterdam that develops open source IATI tools, such as transparency portals for open UNESCO, open UN-Habitat, openaidNL and the Urban data portal for UN-Habitat. All these tools run on an Open IATI Parser and API called OIPA, which was developed by Zimmerman & Zimmerman.</p>
+			<p>Aiddata.rvo.nl is designed & developed by <a href="http://www.zimmermanzimmerman.nl" target="_blank">Zimmerman & Zimmerman</a>. Zimmerman & Zimmerman is a dutch open-data visualisation company based in Amsterdam that develops open source IATI tools, such as transparency portals for <a href="http://opendata.unesco.org" target="_blank">Open UNESCO</a>, <a href="http://open.unhabitat.org" target="_blank">Open UN-Habitat</a>, <a href="http://www.openaid.nl/" target="_blank">OpenaidNL</a> and the <a href="http://urbandata.unhabitat.org" target="_blank">Urban Data Portal for UN-Habitat</a>. All these tools run on an Open IATI Parser and API called <a href="http://www.oipa.nl" target="_blank">OIPA</a>, which was developed by Zimmerman & Zimmerman.</p>
 			<p>Aiddata.rvo.nl by Zimmerman & Zimmerman is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 			<p>Based on a work at <a href="https://github.com/zimmerman-zimmerman/rvo" target="_blank">https://github.com/zimmerman-zimmerman/rvo</a>
+
 			<h2>Disclaimer</h2>
-			<p>This portal is managed by the Netherlands Enterprise Agency, an agency of the Dutch government concerned with international business and cooperation. Whilst a great deal of care has been taken in compiling the contents of this portal, the Agency can not be held liable for any damages resulting from any inaccuracies and/or outdated information.
-			Copying or reproducing information from this site is permitted solely when accompanied with an acknowledgement of the source and the preservation of any references to the Netherlands Enterprise Agency.</p>
+			<p>This portal is managed by Netherlands Enterprise Agency, an agency of the Dutch government concerned with international business and cooperation. Whilst a great deal of care has been taken in compiling the contents of this portal, the Agency cannot be held liable for any damages resulting from any inaccuracies and/or outdated information.</p>
 			<p>This portal may include relevant links to external websites. The Netherlands Enterprise Agency cannot be held responsible for the contents of websites of external parties.</p>
 		</div>
 	</div>
